# dira-fair

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/api/: config.py  database.py  main.py  seed.py
apps/api/api/models/: __init__.py  cbs_rent.py  neighborhood.py  rent_index.py  rental_listing.py  transaction.py
apps/api/api/routers/: neighborhoods.py  rent_check.py  stats.py
apps/api/api/scrapers/: base.py  cbs.py  nadlan.py  yad2.py
apps/api/api/services/: market_signals.py  rent_scorer.py
apps/api/data/: neighborhoods.json
apps/api/tests/: test_scoring.py
apps/web/: e2e-serve.sh  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/check/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/explore/: page.tsx
apps/web/components/: address-autocomplete.tsx  confidence-badge.tsx  explore-map.tsx  listing-map.tsx  neighborhood-comparison.tsx  price-distribution.tsx  rent-checker-form.tsx  rent-score-card.tsx  savings-calculator.tsx  trend-chart.tsx
apps/web/e2e/: dashboard.spec.ts  landing.spec.ts  links.spec.ts  neighborhood.spec.ts  rent-check.spec.ts
apps/web/lib/: api.ts  data.ts  format.ts  listings-data.ts  scoring.ts  types.ts
scripts/: generate-listings.mjs
(+2 files in other folders)
