[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dira-fair-api"
version = "0.1.0"
description = "Rental market intelligence API for Tel Aviv"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"api/scrapers/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
